@@ -1,5 +1,9 @@
-FrostWire 1.6.4 - SEPTEMBER/11/2015
+FrostWire 1.6.4 - SEPTEMBER/21/2015
  - New http engine based on okhttp, uses pooled connections, less threads, less memory.
+ - Fixes KAT search.
+ - Fixes BitSnoop search.
+ - Browsing document files now reveals all saved .apk and .torrent files.
+ - Multiple crash fixes on audio player.
 
 FrostWire 1.6.3 - SEPTEMBER/06/2015
  - Upgraded Picasso library for image caching.
